--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mocha": "^2.2.4"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --ui bdd --timeout 7000 --reporter spec ./test/test.js",
+    "test": "./node_modules/.bin/mocha --ui bdd --timeout 7000 --reporter spec ./test/*test.js",
     "start": "node server.js"
   },
   "main": "server.js"
